# rust_projects

./: .gitignore  README.md
demo/: README.md  bun.lockb  index.html  index.ts  package.json
demo/src/: App.tsx
nbody_wasm/: Cargo.toml
nbody_wasm/src/: compute.wgsl  lib.rs  main.rs  physics.rs  render.wgsl  simulation.rs  wgpu_context.rs
rust_wasm/: bun.lockb  package.json
test_wasm/: Cargo.toml
test_wasm/src/: lib.rs
wgpu_wasm/: Cargo.toml
wgpu_wasm/src/: lib.rs  runtime.rs
wgpu_wasm/src/render/: context.rs
