[package]
name = "nbody_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.20"
wgpu = "0.18.0"
winit = "0.28"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
