[package]
name = "test_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.66"
features = [ "console" ] 