[package]
name = "wgpu_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = "^0.3.64"
wgpu = "^0.18.0"
winit = "0.29.8"
