[package]
name = "wgpu_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.20"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
wgpu = { version = "0.18", features = ["webgl"]}
winit = "0.29.8"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement',
]
